--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "firebase": "^11.8.1",
     "lottie-react": "^2.4.1",
     "lucide-react": "^0.511.0",
+    "motion": "^12.19.1",
     "react": "^19.1.0",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^19.1.0",
